# Raytracer

./: .gitignore  .tokeignore  Cargo.toml  README.md
api/src/: lib.rs
colour/: Cargo.toml
colour/src/: coefficient_spectrum.rs  film.rs  global_sampler.rs  halton.rs  lib.rs  low_discrepancy.rs  max_min.rs  pixel_sampler.rs  sampled_spectrum.rs  sampler.rs  sobol.rs  stratified.rs  zero_two.rs
data/: Cargo.toml
data/src/: cie.rs  lib.rs  rgb_spectra.rs  sobol.rs
geometry/: Cargo.toml
geometry/src/: animated_transform.rs  bounds2.rs  bounds3.rs  float.rs  interaction.rs  interval.rs  lib.rs  low_discrepancy.rs  matrix4x4.rs  normal3.rs  number.rs  parallel.rs  point2.rs  point3.rs  quaternion.rs  ray.rs  rng.rs  sampling.rs  transform.rs  vector2.rs  vector3.rs
lang/src/: ast.rs  lib.rs  parser.rs  scanner.rs
main/: Cargo.toml
main/src/: camera.rs  film.rs  main.rs  pbrt_parser.rs  perlin.rs  ray.rs  scene.rs  scene_format.rs  shapes.rs
parsers/: Cargo.toml
parsers/src/: lib.rs
proc/: Cargo.toml
proc/src/: lib.rs
shapes/: Cargo.toml
shapes/src/: bvh.rs  cone.rs  curve.rs  cylinder.rs  disk.rs  hyperboloid.rs  interaction.rs  kd_tree.rs  lib.rs  paraboloid.rs  primitive.rs  quadric.rs  sphere.rs  triangle.rs  triangle_mesh.rs
src/: aabb.rs  bvh.rs  camera.rs  hit.rs  main.rs  material.rs  ray.rs  ray_trace.rs  scene.rs  scene_format.rs  shapes.rs  texture.rs  utils.rs
src/geometry/: animated_transform.rs  bounds2.rs  bounds3.rs  interval.rs  mod.rs  (+10 more)
test/: camera.toml  cornell.toml  globe.toml  perlin.toml  random.toml  scene.toml  week.toml
(+47 files in other folders)
