[package]
name = "raytracing"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.2.14", features = ["derive"] }
image = "0.24.3"
rayon = "1.5.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
glam = "0.21.2"
rand = "0.8.5"
